--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
+    "minisearch": "^7.2.0",
     "patch-package": "^8.0.0",
     "radix-ui": "^1.3.4",
     "react": "19.0.0",
